<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="5dp"
    android:id="@+id/cv"
    android:gravity="top"
    android:paddingTop="20dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:padding="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:id="@+id/relativeLayout"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:id="@+id/linearLayout3">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/drawer_item_reg"
                android:id="@+id/textView12"
                android:textColor="@color/counterTextColor"
                android:layout_margin="5dp" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/drawer_item_name"
                android:textColor="@color/DarkTextColor"
                android:ems="10"
                android:id="@+id/t1"
                android:paddingTop="24dp"
                android:paddingLeft="20dp" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="@string/drawer_item_age"
                android:textColor="@color/DarkTextColor"
                android:ems="10"
                android:id="@+id/t2"
                android:paddingTop="24dp"
                android:paddingLeft="20dp" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:textColor="@color/DarkTextColor"
                android:hint="@string/drawer_item_sex"
                android:maxLength="1"
                android:ems="10"
                android:id="@+id/t3"
                android:paddingTop="24dp"
                android:paddingLeft="20dp" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="@string/drawer_item_weight"
                android:textColor="@color/DarkTextColor"
                android:ems="10"
                android:id="@+id/t4"
                android:paddingTop="24dp"
                android:paddingLeft="20dp" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="@string/drawer_item_height"
                android:textColor="@color/DarkTextColor"
                android:ems="10"
                android:id="@+id/t5"
                android:paddingTop="24dp"
                android:paddingLeft="20dp" />

        </LinearLayout>

        <android.support.design.widget.FloatingActionButton
            app:fabSize="normal"
            app:backgroundTint="@color/colorPrimary"
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_done"

            android:layout_alignWithParentIfMissing="false"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="15dp"
            android:layout_marginRight="10dp" />

    </RelativeLayout>

</android.support.v7.widget.CardView>


